test/files/neg/t8015-ffa.scala

package foo

//-------object Next

trait F {
  val i: Int = "3"      // error line 7 (was 8)
}
